Adding reference links

--- a/Intermediate_Python/exercises/00-Basics_refresher.ipynb
+++ b/Intermediate_Python/exercises/00-Basics_refresher.ipynb
@@ -187,6 +187,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Acknowledgements\n",
+    "Data and outlines for this exercise follow from the software carpentry [Python novice inflammation example](http://swcarpentry.github.io/python-novice-inflammation/), available under the [Creative Commons license](https://creativecommons.org/licenses/by/4.0/).\n",
+    "\n",
+    "\n",
+    "## Tasks \n",
+    "\n",
     "This exercise centres  around the loading and plotting data from a file while using Numpy functions. \n",
     "You have been given two dimensional data within three csv files and are required to plot the average, maximum and minimum of the columns of that data. \n",
     "\n",
